--- a/📔Notes/1. Git & GitHub Notes.md
+++ b/📔Notes/1. Git & GitHub Notes.md
@@ -95,10 +95,13 @@ git add <--file_name-->			# to add all file use file name --> .
  git commit -m "<--some meaningful massage-->"
 ```
 
+> If there is only modified files then we can skip Add command & use -am flag in commit command.
+
 - ***Push:*** Upload the local repo content to remote repo.
 ```
  git push -u origin main
 ```
+
 > **Breakdown of the above command:**
 > 	1) *git push* is the main command
 > 	2) *-u* is a tag that creates a macro. With this in future if we type `git push` it automatically pushes to `origin main`. 
