--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -1,7 +1,7 @@
 # [CSS Tutorial](https://www.apnacollege.in/path-player?courseid=sigma-8&unit=685029f138b8337000068ea4Unit)
 
 ## [[css.pdf|What is CSS?]]
-**CSS (Cascading Style Sheets)** is a fundamental technology in web development used to control the appearance and layout of web pages. It works alongside **HTML** (which provides structure) and **JavaScript** (which adds interactivity).
+**CSS (Cascading Style Sheets)** is a fundamental technology in web development used to control the appearance and layout of web pages. It works alongside **[[2. HTML Notes|HTML]]** (which provides structure) and **[[4. JavaScript Notes|JavaScript]]** (which adds interactivity).
 
 ### What does CSS do?
 
@@ -565,7 +565,7 @@ input[type="text"] {
 ### Pseudo Class & Pseudo Element in CSS
 
 #### [Pseudo-Classes (`:`)](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes)
-A **pseudo-class** is used to define the **special state** of an element. It **doesn't add new content**, but styles the element **based on conditions** like hover, focus, or position in the DOM.
+A **pseudo-class** is used to define the **special state** of an element. It **doesn't add new content**, but styles the element **based on conditions** like hover, focus, or position in the [[DOM]].
 
 ##### 📋 **Syntax:**
 
