--- a/📔Notes/4. JavaScript Notes.md
+++ b/📔Notes/4. JavaScript Notes.md
@@ -1771,13 +1771,129 @@ Use cases:
 - Functional state
 
 ### Async Functions
-Used with `await`, makes asynchronous code **clean and readable**.
+An `async` function in JavaScript is a modern syntax for writing asynchronous code that looks and behaves more like synchronous code. It returns a **Promise**, and allows you to use the `await` keyword inside it to pause execution until a **Promise** is resolved or rejected.
+
+#### 🔧 How It Works
+
+1. When you declare a function with `async`, it **always returns a Promise**.
+
+2. Inside an `async` function, you can use `await` to wait for a Promise to resolve/reject.
+
+3. If the awaited Promise is resolved, the result is returned.
+
+4. If it's rejected, it throws an error — you handle it with `try/catch`.
+
+#### 💡 Example
 
 ```js
-async function fetchUser() {
-  const response = await fetch("https://api.example.com/user");
-  const user = await response.json();
-  return user;
+// Async keyword
+function add(a, b) {
+    // Normal function
+    return a + b;
+}
+
+async function greet() {
+    // async function -> returns a promise by default
+    
+    let netSpeed = Math.floor(Math.random() * 10) + 1;
+    
+    if (netSpeed > 5) {
+        return "Hello!"; 
+        // if resolved (netSpeed > 5) then a fulfilled promise will 'return'
+    } else {
+        throw "Weak Connection!"; 
+        // If not (netSpeed <= 5) then a rejected promise will 'throw'
+    }
+}
+greet()
+    .then((result) => console.log("Operation succeeded! Stored:", result))
+    .catch((err) =>
+        console.log("An unexpected error occurred! Error:", err)
+    );
+
+function newNum() {
+    return new Promise((resolve, reject) => {
+        setTimeout(() => {
+            let num = Math.floor(Math.random() * 100) + 1;
+            console.log(num);
+            resolve();
+        }, 1000);
+    });
+}
+
+async function getNewNum(num) {
+    for (let i = 0; i <= num; i++) {
+        await newNum();
+    }
+    console.log("Operation completed");
+}
+getNewNum(20);
+
+// Ok... Explanation time! We transfer the core logic to a normal function newNum. In real world it could be some APIs permissions from user, DB related work.... Which means it can take a good amount of time (variable)... but we need to execute them one after another... we can use promises, .then, .catch. But, we have much readable way!
+
+// The await keyword can be used only if the function is async! It's the core reason to make getNewNum a async one.
+
+// With await keyword, we trying to say to single threaded js "That's greet, you are giving the async task to the browser but in this task wait for browser for reply.". It has a much better syntax than callback hell & .then, .catch.
+
+// Problem!!! : Let's take the above example, if one of the promises rejects then... BOOM💥... the code execution will stop and the "Completed" message will never be displayed...even though the message was not directly associate to the awaits.
+
+// Solution: try & catch block!
+// Let's refactor the fist example of this & add a 5 sec timer for each task!
+
+function job() {
+    return new Promise((resolve, reject) => {
+        setTimeout(() => {
+            let netSpeed = Math.floor(Math.random() * 10) + 1;
+            if (netSpeed > 5) {
+                resolve("Hello!");
+            } else {
+                reject("Weak Connection!");
+            }
+        }, 5000);
+    });
+}
+
+async function doTheJob(num) {
+    try {
+        for (let i = 0; i <= num; i++) {
+            let message = await job();
+            console.log("Operation succeeded! Stored:", message);
+        }
+    } catch (err) {
+        console.log("An unexpected error occurred! Error:", err);
+    }
+	
+    // This will now run even though the above code throws error.
+    let pass = true;
+    console.log(typeof pass);
+}
+doTheJob(5);
+
+// Keep core logic in normal functions. Use async only when necessary — like for orchestration (calling, sequencing, awaiting).
+```
+
+#### 🧠 Key Points
+
+- `await` can **only** be used inside an `async` function.
+
+- Makes code cleaner than using `.then()` and `.catch()`.
+
+- Helps avoid "callback hell" and deeply nested Promises.
+
+#### 🔍 Behind the Scenes
+This:
+
+```js
+async function example() {
+  return "Hello";
+}
+```
+
+Is basically this under the hood:
+
+```js
+function example() {
+  return Promise.resolve("Hello");
 }
 ```
 
@@ -2719,7 +2835,7 @@ console.log(sum([5, 7])); // 12
 ---
 
 ## [[DOM]] Manipulation in JavaScript
-**DOM (Document Object Model) manipulation** in JavaScript means using JavaScript to interact with and change elements on a web page—like updating text, changing styles, adding/removing elements, or responding to user actions.
+**[[DOM]] (Document Object Model) manipulation** in JavaScript means using JavaScript to interact with and change elements on a web page—like updating text, changing styles, adding/removing elements, or responding to user actions.
 
 ### Document Object
 The `document` object in JavaScript is a part of the **DOM (Document Object Model)** and represents the **entire HTML page** loaded in the browser. It allows you to **access, manipulate, and change** the structure, style, and content of the webpage dynamically.
@@ -4220,3 +4336,1197 @@ saveToDB2("Hi")
 |More verbose|Easier to read, debug|
 
 ---
+
+## API Besics
+
+### What is an API?
+
+- Click [[API|here]] to learn more!
+
+### What is JSON & XML?
+
+- Click [[JSON|here]] to learn about JSON.
+
+- Click [[XML|here]] to learn about XML.
+
+### API testing Tools
+
+- [Hoppscotch](https://hoppscotch.io/) <- Online, Browser base.
+
+- [Postman](https://www.postman.com/) <- Offline software, Log in required.
+
+### Free APIs
+
+- [[Free APIs for Project.pdf|List]]
+
+- [Website 1](https://free-apis.github.io/#/)
+
+- [Website 2](https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/)
+
+### API insights
+
+##### ⚙️ **What is AJAX?**
+
+**AJAX = Asynchronous JavaScript And XML**
+
+- Makes asynchronous requests to APIs without reloading the page.
+
+- Nowadays used mostly with **JSON**, not XML.
+
+- Powered by `fetch()` or `XMLHttpRequest`.
+
+##### ⚒️ **HTTP Methods (Verbs)**
+
+|Method|Purpose|Used In Frontend?|
+|---|---|---|
+|`GET`|Retrieve data|✅ Most common|
+|`POST`|Send data|⚠️ Usually done via forms or backend|
+|`DELETE`|Delete data|❌ Typically backend only|
+|`PUT`|Update data|❌ Backend only (not in your original note, but common)|
+
+##### 🔁 **Status Codes (Important Ones)**
+
+|Code|Meaning|
+|---|---|
+|200|OK (Success)|
+|400|Bad Request|
+|404|Not Found|
+|500|Internal Server Error|
+
+📝 Learn more: [MDN HTTP Status Reference](https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Status)
+
+##### 🎯 **Customizing API Requests**
+
+1. **Query Strings**
+	
+- Add extra info to the URL:
+	
+```arduino
+https://api.com/products?category=books&price=low
+```
+	
+- Unrecognized query parameters are ignored by most APIs.
+
+2. **API Routes**
+	
+- Defined by the API documentation.
+	
+- Example:
+	
+```bash
+https://api.example.com/user/123/posts
+```
+
+##### 🧾 **Headers**
+
+- **Request Headers**: Sent with the request (e.g., `Authorization`, `Content-Type`)
+
+- **Response Headers**: Received with the response (e.g., `Content-Length`, `Cache-Control`)
+
+---
+
+## API Handling with JavaScript
+ When JSON format come to JS program it was in a big strings, that we can't directly access... We have two methods.
+
+### JSON Methods
+JavaScript provides two main methods to handle JSON data:
+
+#### 1. `JSON.stringify()`
+
+Converts a JavaScript object or value to a JSON string.
+
+```javascript
+const obj = { name: "Sankho", goal: "Super Software Engineer" };
+const jsonStr = JSON.stringify(obj);
+console.log(jsonStr); // '{"name":"Sankho","goal":"Super Software Engineer"}'
+```
+
+#### 2. `JSON.parse()`
+
+Parses a JSON string and converts it into a JavaScript object.
+
+```javascript
+const jsonStr = '{"name":"Sankho","goal":"Super Software Engineer"}';
+const obj = JSON.parse(jsonStr);
+console.log(obj.name); // Sankho
+```
+
+**⚠️ Gotchas:**
+
+- The string passed to `JSON.parse()` **must be valid JSON** (use double quotes for keys and string values).
+
+- `JSON.stringify()` cannot serialize functions or `undefined`.
+
+### `fetch()` Method
+
+#### Purpose:
+Used to make HTTP requests (GET, POST, etc.). Returns a **Promise**.
+
+- Basic GET Example:
+	
+```javascript
+fetch('https://api.example.com/data')
+	.then(response => response.json()) // Parse JSON from the response
+	.then(data => {
+    	console.log(data); // Work with your data here
+	})
+	.catch(error => {
+    	console.error('Fetch error:', error);
+	});
+```
+
+- POST Example with JSON:
+	
+```javascript
+const payload = {
+	name: "Sankho",
+	level: "Hardworking"
+};
+
+fetch('https://api.example.com/submit', {
+	method: 'POST',
+	headers: {
+		'Content-Type': 'application/json'
+	},
+	body: JSON.stringify(payload)
+})
+	.then(response => response.json())
+	.then(data => {
+		console.log('Server response:', data);
+	})
+	.catch(error => {
+		console.error('POST failed:', error);
+	});
+```
+
+#### Quick Tips:
+
+- `fetch()` is **asynchronous**, so use `async/await` for cleaner syntax:
+    
+```javascript
+async function getData() {
+    try {
+        const response = await fetch('https://api.example.com/data');
+        const data = await response.json();
+        console.log(data);
+    } catch (err) {
+        console.error(err);
+    }
+}
+```
+
+- Always handle `.catch()` or use `try/catch` to avoid silent failures.
+
+- Use `JSON.stringify()` when sending data; use `.json()` to receive data.
+
+---
+
+### Axios in JavaScript
+**Axios** is a **promise-based HTTP client** for JavaScript, primarily used to **make HTTP requests from the browser or Node.js**. It's built on top of the native `XMLHttpRequest` in the browser and `http` module in Node.
+
+#### 🔧 Core Features of Axios
+
+1. **Make Requests**  
+    Supports all HTTP methods: `GET`, `POST`, `PUT`, `DELETE`, etc.
+    
+```js
+axios.get('https://api.example.com/data')
+	.then(response => console.log(response.data))
+    .catch(error => console.error(error));
+```
+
+2. **Automatic JSON Handling**  
+    Automatically parses JSON responses and sets appropriate headers for sending JSON data.
+
+3. **Request and Response Interceptors**  
+    You can intercept requests/responses for things like auth tokens or logging.
+    
+```js
+axios.interceptors.request.use(config => {
+    config.headers.Authorization = 'Bearer yourToken';
+    return config;
+});
+```
+
+4. **Cancel Requests**  
+    Built-in support to cancel requests using `CancelToken`.
+
+5. **Timeouts and Errors**  
+    Handles request timeouts and status-based error handling.
+    
+```js
+axios.get('/data', { timeout: 5000 });
+```
+
+6. **Client-Side & Server-Side**  
+    Works in both browser and Node.js environments.
+
+#### 🧠 Why Use Axios Over `fetch()`?
+
+|Feature|`fetch()`|`axios`|
+|---|---|---|
+|Response Parsing|Manual (`res.json()`)|Auto-parsed|
+|Timeout Handling|Manual setup|Built-in|
+|Request Cancellation|No native support|Built-in|
+|Interceptors|No|Yes|
+|Older Browser Support|Limited|Better|
+
+#### 📦 Installation
+
+```bash
+npm install axios
+```
+
+Or via CDN:
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+```
+
+#### ✅ Quick Use Case Example
+
+```js
+async function getUserData(userId) {
+  try {
+    const response = await axios.get(`/api/users/${userId}`);
+    return response.data;
+  } catch (error) {
+    console.error('Error fetching user:', error);
+  }
+}
+```
+
+---
+
+## Request Header sending in JavaScript
+To **send headers with Axios** in JavaScript, you pass them in the **`headers` field of the config object** as the second argument in most Axios methods like `axios.get()` or `axios.post()`.
+
+### Syntax
+
+```js
+axios.get(url, {
+  headers: {
+    'Authorization': 'Bearer YOUR_TOKEN',
+    'Content-Type': 'application/json',
+    'Custom-Header': 'value'
+  }
+});
+```
+
+### Examples
+
+#### 1. GET Request with Headers
+
+```js
+axios.get('https://api.example.com/data', {
+  headers: {
+    'Authorization': 'Bearer abc123',
+    'Accept': 'application/json'
+  }
+});
+```
+
+#### 2. POST Request with Headers and Body
+
+```js
+axios.post('https://api.example.com/user', 
+  {
+    name: 'Sankho',
+    role: 'student'
+  }, 
+  {
+    headers: {
+      'Content-Type': 'application/json',
+      'X-App-Version': '1.0.0'
+    }
+  }
+);
+```
+
+### Setting Default Headers (Globally)
+
+If you're sending the same headers often (like `Authorization`), set defaults once:
+
+```js
+axios.defaults.headers.common['Authorization'] = 'Bearer abc123';
+axios.defaults.headers.post['Content-Type'] = 'application/json';
+```
+
+### Example: Token Auth with Interceptor
+
+```js
+axios.interceptors.request.use(config => {
+  config.headers.Authorization = 'Bearer yourTokenHere';
+  return config;
+});
+```
+
+### Notes
+
+- Headers are key-value pairs.
+
+- Case-insensitive (but typically capitalized for readability).
+
+- You don’t need to manually set `Content-Type` for JSON — Axios does it automatically unless you override it.
+
+---
+
+## [[JS OOPS 11 (Qs).pdf|OPPs in JavaScript ]]
+**OOP (Object-Oriented Programming) in JavaScript** isn’t quite the same as in Java or C++. JavaScript started as a _prototype-based_ language, not a class-based one, but ES6 introduced `class` syntax to make it look and feel more familiar. Under the hood, it’s still prototypes doing the work.
+
+### Core OOP Concepts in JavaScript
+The big four pillars still apply:
+
+#### 1. Encapsulation
+
+- Grouping related data (properties) and behavior (methods) together.
+
+- Achieved via objects, closures, or ES6 classes.
+	
+```js
+class User {
+	constructor(name, email) {
+    	this.name = name;
+    	this.email = email;
+	}
+	login() {
+    	console.log(`${this.name} has logged in.`);
+	}
+}
+```
+
+#### 2. Abstraction
+
+- Hiding internal complexity and exposing a clean interface.
+
+- Can be done using private fields (`#field`) or convention (`_privateVar`).
+	
+```js
+class BankAccount {
+	#balance = 0; // Private field
+	deposit(amount) {
+    	if (amount > 0) this.#balance += amount;
+	}
+	getBalance() {
+    	return this.#balance;
+	}
+}
+```
+
+#### 3. Inheritance
+Inheritance in JavaScript is the mechanism by which one object can access properties and methods of another, allowing code reuse and a hierarchical structure for objects. Unlike class-based languages like Java or C++, JavaScript historically used **prototype-based inheritance**, though since ES6, the `class` syntax has made it look more familiar to developers from other languages.
+
+Here’s the breakdown:
+
+##### 1. Prototype-Based Inheritance (The Core Mechanism)
+Every JavaScript object has an internal link to another object called its **prototype**.  
+When you try to access a property on an object:
+
+- JS looks for it on the object itself.
+
+- If not found, it looks up the chain (prototype → prototype → …) until `null` is reached.
+
+Example:
+
+```javascript
+const parent = {
+	greet() {
+    	console.log("Hello from parent!");
+	}
+};
+
+const child = Object.create(parent);
+child.sayHi = function() {
+	console.log("Hi from child!");
+};
+
+child.greet(); // Inherited from parent
+child.sayHi(); // Defined on child
+```
+
+##### 2. Constructor Functions (Pre-ES6 Style)
+Before `class`, inheritance was often done using **constructor functions** with `.prototype`.
+
+Example:
+
+```javascript
+function Person(name) {
+  this.name = name;
+}
+
+Person.prototype.sayName = function() {
+  console.log(this.name);
+};
+
+function Student(name, grade) {
+  Person.call(this, name); // Call parent constructor
+  this.grade = grade;
+}
+
+// Inherit from Person
+Student.prototype = Object.create(Person.prototype);
+Student.prototype.constructor = Student;
+
+Student.prototype.sayGrade = function() {
+  console.log(this.grade);
+};
+
+const s1 = new Student("Alice", "A");
+s1.sayName();  // Alice
+s1.sayGrade(); // A
+```
+
+##### 3. ES6 Class Syntax (Sugar Over Prototypes)
+The `class` and `extends` keywords are **syntactic sugar** over the prototype system.  
+It’s cleaner but works the same under the hood.
+
+Example:
+
+```javascript
+class Person {
+  constructor(name) {
+    this.name = name;
+  }
+  sayName() {
+    console.log(this.name);
+  }
+}
+
+class Student extends Person {
+  constructor(name, grade) {
+    super(name); // Calls Person's constructor
+    this.grade = grade;
+  }
+  sayGrade() {
+    console.log(this.grade);
+  }
+}
+
+const s1 = new Student("Bob", "B");
+s1.sayName();  // Bob
+s1.sayGrade(); // B
+```
+
+##### 4. Key Points to Remember
+
+- **Prototype chain** is the real engine; classes are just syntax sugar.
+
+- `Object.create()` is the cleanest way to set up inheritance without constructors.
+
+- `super` in classes calls the parent’s constructor or methods.
+
+- You can even chain multiple levels of inheritance.
+
+- JavaScript supports **single inheritance** for prototypes but can mimic **multiple inheritance** via mixins.
+
+---
+
+#### 4. Polymorphism
+
+- Same method name, different behavior depending on the object.
+
+- Achieved by method overriding.
+    
+```js
+class Animal {
+	speak() {
+    	console.log("Some sound");
+	}
+}
+class Dog extends Animal {
+	speak() {
+    	console.log("Woof!");
+	}
+}
+```
+
+---
+
+### ‼️ Code Example:
+```js
+//Main concern!!
+{
+    let student1 = {
+        name: "Sankho",
+        class: 12,
+        roll: 1,
+        seyInfo() {
+            console.log(
+                `Hi, My name is ${this.name}. I am ${this.class + 5} years old.`
+            );
+        },
+    };
+    let student2 = {
+        name: "ChatGPT",
+        class: 10,
+        roll: 5,
+        seyInfo() {
+            console.log(
+                `Hi, My name is ${this.name}. I am ${this.class + 5} years old.`
+            );
+        },
+    };
+    let student3 = {
+        name: "Rohit",
+        class: 9,
+        roll: 1,
+        seyInfo() {
+            console.log(
+                `Hi, My name is ${this.name}. I am ${this.class + 5} years old.`
+            );
+        },
+    };
+    // So, here we can see that for every student we have to define a new object 	for every student this is very inefficient.
+    // If somehow we can create a blueprint like ejs, then this would be very 		easy :).
+}
+
+// Object prototype
+// this is really fascinating!
+
+// Question: How every array can use push function?
+// Answer: Object prototype!
+
+// Object prototype is a collection of methods that can be access from any same type of object.
+// i.e - Every array has a reference of array prototype... that why we can use it from any array & on the other hand as the the individual prototype have only the reference of only one real instance that's why it's also efficient in terms of memory usage.
+
+{
+    console.log("----------------------Convectional------------------------");
+    let arr1 = [1, 2, 3];
+    let arr2 = [4, 5, 6];
+	
+    arr1.sayHello = () => console.log("Hello!");
+    arr2.sayHello = () => console.log("Hello!");
+	
+    let a = Boolean(arr1.sayHello === arr2.sayHello);
+    let b = Boolean(arr1.push === arr2.push);
+	
+    console.log(a); // False
+    console.log(b); // True
+	
+    // What happened?
+    // As our defined functions are in individual level that's why, the 			references are not equal.
+    // But, for prototype function the reference is same... so, it's true.
+	
+    //accessing prototype
+    //Individual
+    console.log(arr1.__proto__);
+    //We can change it! But, it will change this method definition for all 			arrays... So, not a good practice.
+    arr1.__proto__.push = (n) => console.log(n);
+    arr1.push(3);
+	
+    // Main prototype
+    console.log(Array.prototype);
+}
+
+// Factory function
+// A step up for more reusability
+{
+    console.log("----------------Factory Function-------------------------");
+    let personMaker = function (name, age) {
+        let person = {
+            name: name,
+            age: age,
+            talk() {
+                console.log(`Hi, my name is ${this.name}.`);
+            },
+        };
+        return person;
+    };
+	
+    // We can now make new individual object by writing only one line.
+    let p1 = personMaker("Sankho", 19);
+    let p2 = personMaker("Rohit", 17);
+	
+    // The talk method is working
+    p1.talk();
+	
+    console.log(p1);
+    console.log(p2);
+	
+    // Cons
+    let a = Boolean(p1.talk === p2.talk);
+    console.log(a);
+    // We can clearly see that, the reference of talk methods are different... 		means the stores in different places... Inefficient in terms of memory :(
+}
+
+// Constructors
+// Special functions to create blueprints
+{
+    console.log("-----------------------Constructor-----------------------");
+    // Let's take the previous example
+	
+    // programmer rule: constructor function name's first letter should be 			capitalized and it should not return anything.
+    // Not necessary to follow but, for being better programmer we should follow.
+    const Person = function (name, age) {
+        this.name = name;
+        this.age = age;
+        console.log(this);
+    };
+	
+    Person.prototype.talk = function () {
+        console.log(`Hi! my name is ${this.name}`);
+    };
+	
+    // This works the same way... One line for each object.
+    let p1 = new Person("Sankho", 19);
+    let p2 = new Person("Rohit", 17);
+    // New: A new key work that make a function into constructor in just 4 steps!
+    // 1. First new creates a empty object.
+    // 2. Add the prototype function's reference to the object
+    // 3. change the this from default to the variable (object)
+    // 4, stores the parameters as key value pair.
+	
+    // We make the talk method a prototype, so, every instance will have a 			reference of that.
+    p1.talk();
+	
+    console.log(p1);
+    console.log(p2);
+	
+    let a = Boolean(p1.talk === p2.talk);
+    console.log(a);
+    // Here we can see that it only stores the reference so, memory efficient.
+	
+    // Cons
+    // The syntax is complicated & the methods took separate declaration to work.
+}
+
+// Classes
+// Same logic, but cleaner implementation.
+{
+    console.log("--------------------------Classes------------------------");
+    // As a good developer, we should follow the class creating rules which are 	same as constructor creating rules.
+    class Person {
+        constructor(name, age) {
+            // Here we can clearly identify that it's a constructor function.
+            this.name = name;
+            this.age = age;
+        }
+        talk() {
+            console.log(`Hi! my name is ${this.name}`);
+        }
+        // The prototype method is much easy to declare here.
+        // The prototype is in the same code block as the blueprint.
+    }
+	
+    // The syntax for creating new instances is same
+    let p1 = new Person("Sankho", 19);
+    let p2 = new Person("Rohit", 17);
+	
+    // Prototype functions are useable.
+    p2.talk();
+	
+    console.log(p1);
+    console.log(p2);
+	
+    let a = Boolean(p1.talk === p2.talk);
+    console.log(a);
+    // Here we can see that it only stores the reference so, memory efficient.
+}
+
+// Inheritance
+// Inheritance is a mechanism that allows us to create new classes on the basis of already existing classes.
+{
+    /*     
+    class Dog {
+        constructor(name){
+            this.name = name;
+            this.type = "Dog"
+            this.blood = "Warm-blooded"
+        }
+        eat(){
+            console.log(`${this.name} is eating...`);
+        }
+        bark(){
+            console.log("Woof...");
+        }
+    }
+	
+    class Cat {
+        constructor(name){
+            this.name = name;
+            this.type = "Cat"
+            this.blood = "Warm-blooded"
+        }
+        eat(){
+            console.log(`${this.name} is eating...`);
+        }
+        meow(){
+            console.log("meowww...");
+        }
+    } 
+    */
+    // In this example, we can see that both classes have some common properties!
+    // So, here we can use inheritance to minimize redundancy.
+	
+    console.log("-----------------------Inheritance-----------------------");
+    class Mammal {
+        constructor(name) {
+            this.name = name;
+            this.blood = "Warm-blooded";
+        }
+        eat() {
+            console.log(`${this.name} is eating...`);
+        }
+    }
+	
+    class Dog extends Mammal {
+        // We inherit the properties from Mammal using extends keywords
+        constructor(name) {
+            super(name); // Calling the base/parent class constructor
+            this.type = "Dog";
+        }
+        // Some class specific methods
+        bark() {
+            console.log("Woof...");
+        }
+    }
+	
+    class Cat extends Mammal {
+        constructor(name) {
+            super(name);
+            this.type = "Cat";
+        }
+        // Some class specific methods
+        meow() {
+            console.log("meowww...");
+        }
+		
+        // We can override prototype function directly
+        eat() {
+            console.log("Cat is eating");
+        }
+    }
+	
+    let dog1 = new Dog("Tuffie");
+    let dog2 = new Dog("Maxxie");
+	
+    let cat1 = new Cat("Ratana");
+    let cat2 = new Cat("Meowie");
+	
+    console.log(dog1);
+    console.log(dog2);
+    console.log(cat1);
+    console.log(cat2);
+	
+    dog1.bark();
+    dog2.eat();
+	
+    // cat2.bark(); // This will throw error, we are trying to access sibling 		class specific methods
+    cat1.meow();
+    cat2.eat(); // Override
+	
+    let a = Boolean(dog1.bark === dog2.bark);
+    let b = Boolean(cat1.eat === cat2.eat);
+    let c = Boolean(dog1.eat === dog2.eat);
+    let d = Boolean(dog1.eat === cat2.eat);
+	
+    console.log(a); // Same class instance
+    console.log(b); // Same class instance
+    console.log(c); // Parent class's same inherited instance
+    console.log(d); // Override side effect.
+}
+```
+
+---
+
+### Object Prototype
+In JavaScript, **prototypes** are the foundation of how objects share behavior. They’re the mechanism that makes **inheritance** work in JS.
+
+#### 1. Core Concept
+Every JavaScript object has an internal link to another object called its **prototype** (accessible via `Object.getPrototypeOf(obj)` or `obj.__proto__` in older syntax).
+
+That prototype can have properties and methods. If you try to access a property on an object and it’s not there, JavaScript **walks up the prototype chain** to look for it.
+
+#### 2. Prototype Chain Example
+
+```js
+const animal = {
+  eat() { console.log("Eating..."); }
+};
+
+const dog = Object.create(animal);
+dog.bark = function() { console.log("Barking..."); };
+
+dog.bark(); // "Barking..."
+dog.eat();  // Found in prototype → "Eating..."
+```
+
+Here:
+
+- `dog`’s prototype is `animal`.
+
+- If JS can’t find `eat` in `dog`, it looks in `animal`.
+
+#### 3. The Prototype Chain Diagram
+
+```
+dog --> animal.prototype --> Object.prototype --> null
+```
+
+- `Object.prototype` is the top-level object.
+
+- Its prototype is `null`, ending the chain.
+
+#### 4. Key Points
+
+- **Method sharing**: Prototypes prevent method duplication across instances.
+
+- **Prototype chain**: Lookup continues up the chain until found or null.
+
+- **Modification**: Adding methods to the prototype affects all linked instances.
+
+- **Caution**: Overriding `Object.prototype` is dangerous—affects everything.
+
+---
+
+### Factory Function
+A **factory function** in JavaScript is simply a **regular function that returns an object** without using the `new` keyword or a class.
+
+Think of it as a "blueprint maker" that **creates and returns objects**—kind of like a small factory producing product instances.
+
+#### 1. Why Use a Factory Function?
+
+- Avoids the complexities of `this` and `new` from constructor functions.
+
+- Lets you create objects with **private data** using closures.
+
+- Makes code more flexible than classes in some scenarios.
+
+#### 2. Basic Example
+
+```javascript
+function createUser(name, age) {
+    return {
+        name,
+        age,
+        greet() {
+			console.log(`Hello, my name is ${this.name} and I am ${this.age} 				years old.`);
+        }
+    };
+}
+
+// Usage
+const user1 = createUser("Alice", 25);
+const user2 = createUser("Bob", 30);
+
+user1.greet(); // Hello, my name is Alice and I am 25 years old.
+user2.greet(); // Hello, my name is Bob and I am 30 years old.
+```
+
+Here:
+
+- `createUser` is a **factory function**.
+
+- It returns a **new object** every time it’s called.
+
+#### 3. Factory Function with Private Data
+You can hide internal details using closures:
+
+```javascript
+function createCounter() {
+    let count = 0; // private variable
+	
+    return {
+        increment() {
+            count++;
+            console.log(count);
+        },
+        getCount() {
+            return count;
+        }
+    };
+}
+
+const counter = createCounter();
+counter.increment(); // 1
+counter.increment(); // 2
+console.log(counter.getCount()); // 2
+console.log(counter.count); // undefined (private)
+```
+
+#### 3. When to Use Over Classes
+
+- You want **private state** without extra syntax.
+
+- You want more flexibility (e.g., return different object shapes depending on arguments).
+
+- You prefer avoiding `this` and `prototype` headaches.
+
+---
+
+### Constructors
+In JavaScript, a **constructor** is a special function used to create and initialize objects.  
+It’s typically used with the `new` keyword and is often defined inside a **class** or as a standalone function.
+
+#### 1. Constructor in a Class
+When using ES6 `class` syntax, the `constructor` method is automatically called when you create a new instance.
+
+```javascript
+class Person {
+	constructor(name, age) {
+    	this.name = name;
+    	this.age = age;
+	}
+	
+	greet() {
+		console.log(`Hi, I'm ${this.name} and I'm ${this.age} years old.`);
+	}
+}
+
+const p1 = new Person("Alice", 25);
+p1.greet(); // Hi, I'm Alice and I'm 25 years old.
+```
+
+**Key points:**
+
+- Only **one** constructor is allowed per class.
+
+- If you don’t define one, JavaScript creates a default constructor for you.
+
+#### 2. Constructor Function (Pre-ES6)
+Before ES6 classes, constructors were just normal functions starting with a capital letter.
+
+```javascript
+function Car(brand, year) {
+  this.brand = brand;
+  this.year = year;
+}
+
+Car.prototype.showInfo = function () {
+  console.log(`${this.brand} - ${this.year}`);
+};
+
+const car1 = new Car("Toyota", 2022);
+car1.showInfo(); // Toyota - 2022
+```
+
+#### 3. How the `new` Keyword Works
+When you use `new Constructor(...)`:
+
+1. A new empty object is created.
+
+2. `this` is set to point to that new object.
+
+3. The constructor code runs and assigns properties/methods to `this`.
+
+4. The new object is returned (unless you return something else explicitly).
+
+#### 4. Important Notes
+
+- Constructors **should not** return primitive values (like strings or numbers).
+
+- Use PascalCase naming for constructor functions (`Person`, `Car`) for clarity.
+
+- You can combine constructors with **prototypes** for shared methods (saves memory).
+
+- In ES2022+, you can use **class fields** inside constructors for cleaner initialization.
+
+---
+
+### Classes
+
+#### 1. What a Class Really Is in JavaScript
+
+In JavaScript, **classes are not magical new data structures** — they’re just **syntactic sugar** over the older **prototype-based inheritance** model.
+
+When you define a class in JS:
+
+- It’s basically creating a constructor function.
+
+- The methods you define are put on the class’s `.prototype` object.
+
+- You can still use `instanceof` and `Object.getPrototypeOf()` to inspect inheritance.
+
+#### 2. Basic Class Syntax
+
+```javascript
+class Person {
+	constructor(name, age) {
+		this.name = name;
+    	this.age = age;
+	}
+	
+	greet() {
+    	console.log(`Hi, I'm ${this.name} and I'm ${this.age} years old.`);
+	}
+}
+
+const p1 = new Person("Sankho", 21);
+p1.greet(); // Hi, I'm Sankho and I'm 21 years old.
+```
+
+**Key notes:**
+
+- `constructor` runs automatically when you use `new`.
+
+- Methods inside a class **do not need `function` keyword**.
+
+- All class methods are **non-enumerable** by default (unlike normal object methods).
+
+#### 3. Class Expressions
+
+Classes can be:
+
+```javascript
+// Named class expression
+const MyClass = class MyNamedClass {
+	// internal name only visible inside class
+};
+
+// Anonymous class expression
+const AnotherClass = class {
+	// no name
+};
+```
+
+#### 4. Inheritance with `extends`
+
+```javascript
+class Student extends Person {
+	constructor(name, age, grade) {
+    	super(name, age); // calls parent constructor
+    	this.grade = grade;
+	}
+	
+	greet() {
+    	super.greet(); // calls Person.greet()
+    	console.log(`I am in grade ${this.grade}.`);
+	}
+}
+
+const s1 = new Student("Sankho", 21, "A");
+s1.greet();
+```
+
+**Key rules:**
+
+- `super()` must be called **before** accessing `this` in a subclass constructor.
+
+- You can call parent methods using `super.methodName()`.
+
+#### 5. Getters & Setters
+
+```javascript
+class Product {
+	constructor(name, price) {
+    	this.name = name;
+    	this._price = price;
+	}
+	
+	get price() {
+    	return this._price;
+	}
+	
+	set price(value) {
+    	if (value < 0) throw new Error("Price can't be negative");
+    	this._price = value;
+	}
+}
+
+const p = new Product("Laptop", 1200);
+console.log(p.price); // 1200
+p.price = 1500;
+```
+
+- Useful for encapsulation.
+
+- Can be used with `Object.defineProperty` under the hood.
+
+#### 6. Static Methods & Properties
+
+```javascript
+class MathUtil {
+	static add(a, b) {
+    	return a + b;
+	}
+}
+
+console.log(MathUtil.add(3, 5)); // 8
+```
+
+- Static members are **accessible on the class itself**, not instances.
+
+- Use for utility/helper functions that don’t depend on instance data.
+
+#### 7. Private Fields (#)
+
+```javascript
+class BankAccount {
+	#balance = 0; // truly private
+	
+	deposit(amount) {
+    	this.#balance += amount;
+	}
+	
+	getBalance() {
+    	return this.#balance;
+	}
+}
+
+const acc = new BankAccount();
+acc.deposit(100);
+console.log(acc.getBalance()); // 100
+// acc.#balance // ❌ SyntaxError
+```
+
+- Introduced in ES2022.
+
+- Starts with `#` — not accessible outside the class.
+
+#### 8. Class Fields (Public)
+
+```javascript
+class Counter {
+	count = 0; // public instance field
+	
+	increment() {
+    	this.count++;
+	}
+}
+```
+
+- Declared directly inside class body (without `var`, `let`, or `const`).
+
+#### 9. Behind the Scenes
+
+```javascript
+class A {}
+console.log(typeof A); // function
+console.log(Object.getPrototypeOf(A)); // Function.prototype
+console.log(Object.getPrototypeOf(A.prototype)); // Object.prototype
+```
+
+- Classes are **special functions** with `prototype` properties.
+
+- Methods live on `ClassName.prototype`.
+
+- `extends` sets the prototype chain of both instances and constructors.
+
+#### 10. Key Pitfalls
+
+1. **No hoisting** — unlike function declarations, class declarations are **not** hoisted.
+
+2. Must use `new` to call a class constructor.
+
+3. `this` binding works differently from arrow functions — normal methods lose `this` when extracted unless bound.
+
+#### 11. Advanced Patterns
+
+- **Mixins** (adding multiple behaviors):
+
+```javascript
+let Flyer = Base => class extends Base {
+  fly() { console.log("Flying"); }
+};
+
+class Animal {}
+class Bird extends Flyer(Animal) {}
+
+const b = new Bird();
+b.fly(); // Flying
+```
+
+- **Abstract-like classes** (no true abstract in JS, but can throw in constructor).
+
+---
+
